# flow_grpo

./: LEARNING_PIPELINE_ANALYSIS_KO.md  UV_ADVANCED_KO.md  UV_SETUP_KO.md  grpo_train_log.txt  inf_log.txt  inference.py  pyproject.toml  sd3_sde_inf.py  setup.py  setup_uv.bat  setup_uv.sh
config/: base.py
flow_grpo/: rewards.py
scripts/: train_sd3.py
scripts/demo/: sd3_sde_demo.py
